Set GitHub and Twitter username

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 title: Per Persson (md2perpe)
 description: Programming, mathematics and other
 theme: jekyll-theme-cayman
+
+github_username: md2perpe
+twitter_username: md2perpe
+
